# qt-ogre

./: CMakeLists.txt  README.md
qt-ogre/: CMakeLists.txt  main-window.cxx  main-window.hxx  main.cxx  ogre-sample.cxx  ogre-sample.hxx  ogre-widget.cxx  ogre-widget.hxx
resources/: plugins.cfg  plugins_d.cfg
